# mermaid-erd-generator

./: README.md  main.py  pyproject.toml  run-and-copy.sh  run-and-generate-sql.sh  run-and-open-image.sh  run-and-open-svg.sh  run.sh
csvs/: TEAMS.csv  roles.csv  staff.csv  test.csv  users.csv
mermaid-erd-db-toolkit/: package-lock.json  package.json  shadow-cljs.edn
mermaid-erd-db-toolkit/src/main/: erd_parser.cljs
