[tool.poetry]
name = "mermaid-erd"
version = "0.0.1"
description = "utility for generating mermaid ERD diagrams"
authors = ["Nigel Harsch <nigelharsch@gmail.com>"]
readme = "README.md"
packages = [{include = "mermaid_erd"}]

[tool.poetry.dependencies]
python = "^3.8"
schema = "0.7.5"
pandas = "^1.5.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.20.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
